@startuml
title __ROBOT's Class Diagram__\n

  namespace swarm {
    namespace robot {
      abstract class swarm.robot.Robot {
          # id : int
          # reality : char
          + Robot()
          + delay()
          + getId()
          + handleSubscribeQueue()
          + reset()
          + run()
          + setup()
          + start()
          + stop()
          - handlePublishQueue()
      }
    }
  }

  namespace swarm {
    namespace robot {
      class swarm.robot.VirtualRobot {
          + VirtualRobot()
          + loop()
          + interrupt()
          + sensorInterrupt()
          + communicationInterrupt()
      }
    }
  }


  swarm.robot.Robot .up.|> java.lang.Runnable
  swarm.robot.Robot .up.|> swarm.Interfaces.IRobotState
  swarm.robot.Robot o--left swarm.robot.sensors.ColorSensor : colorSensor
'  swarm.robot.Robot o-- swarm.robot.helpers.Coordinate : coordinates
'  swarm.robot.Robot o-- swarm.robot.communication.DirectedCommunication : directedComm
  swarm.robot.Robot o-- swarm.robot.sensors.DistanceSensor : distSensor
'  swarm.robot.Robot o-- swarm.robot.helpers.MotionController : motion
  swarm.robot.Robot o-- swarm.robot.indicator.NeoPixel : neoPixel
'  swarm.robot.Robot o-- swarm.robot.sensors.ProximitySensor : proximitySensor
  swarm.robot.Robot o-up- swarm.robot.helpers.RobotMQTT : robotMQTT
'  swarm.robot.Robot o-- swarm.mqtt.RobotMqttClient : robotMqttClient
  swarm.robot.Robot o-- swarm.robot.communication.SimpleCommunication : simpleComm
'  swarm.robot.Robot o-- swarm.Interfaces.IRobotState.robotState : state
  swarm.robot.VirtualRobot -left-|> swarm.robot.Robot


'right footer
'
'
'PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
'For more information about this tool, please contact philippe.mesmeur@gmail.com
'endfooter
@enduml